# tools-for-every-python-dev

./: .pre-commit-config.yaml  README.md  pyproject.toml
lib/: demo_black.py  demo_isort.py  demo_mypy.py  demo_pylint.py
